[package]
edition = "2021"
name = "ginger-connector"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.10", features = ["derive"]}
colored = {version = "2.0.1"}
inquire = {version = "0.6.2", features = ["date"]}
serde = {version = "1.0.166", features = ["derive"]}
serde_json = {version = "1.0.100"}
