[package]
description = "ginger connector cli"
edition = "2021"
name = "ginger-connector"
version = "0.9.0-nightly.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
IAMService = {path = "IAMService_client"}
MetadataService = {path = "./MetadataService_client"}
clap = {version = "4.3.10", features = ["derive"]}
colored = {version = "2.0.1"}
dirs = "5.0.1"
ginger-shared-rs = {version = "0.25.0-nightly.0", organization = "ginger-society"}
inquire = {version = "0.6.2", features = ["date"]}
reqwest = { version = "0.12.5", features = ["json"] }
serde = {version = "1.0.166", features = ["derive"]}
serde_json = {version = "1.0.100"}
tokio = {version = "1", features = ["full"]}
toml = "0.8.14"

[package.metadata]
organization = "ginger-society"
